ORG-2719: Fikset opp at testene feilet.